--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
     "expo": "^44.0.0",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
