--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "date-fns": "^2.29.2",
     "expo": "^44.0.0",
-    "expo-font": "^10.2.0",
+    "expo-font": "~10.0.4",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
